# learn_rust

./: README.md
1.RustBook/: readme.md
1.RustBook/guessing_game/: readme.md
1.RustBook/guessing_game/src/: main.rs
1.RustBook/rectangles/src/: main.rs
2.projects/: Cargo.toml  readme.md  task.json  tasks.json
2.projects/crud_api/: Cargo.toml
2.projects/crud_api/migration/: Cargo.toml
2.projects/crud_api/migration/src/: m20220101_000001_create_table.rs
2.projects/crud_api/src/: main.rs
2.projects/crud_api/src/entities/: mod.rs  notes.rs  prelude.rs
2.projects/crud_api/src/handlers/: mod.rs  root_handlers.rs
2.projects/crud_api/src/routes/: mod.rs
2.projects/csv_analyzer/: Cargo.toml
2.projects/file_organizer/: Cargo.toml
2.projects/multi_threaded_downloader/: Cargo.toml
2.projects/word_counter/: file.txt
FlowControl/: Cargo.toml
FlowControl/src/: main.rs
String_ampstr/: Cargo.toml
String_ampstr/src/: main.rs
TypeCoercion/: Cargo.toml
TypeCoercion/src/: main.rs
array/src/: main.rs
associated_functions/src/: main.rs
borrowing/src/: main.rs
char_bool_unit/src/: main.rs
enums/src/: main.rs
functions/src/: main.rs
generics/src/: main.rs
hashmaps/src/: main.rs
methods/src/: main.rs
numbers/src/: main.rs
ownership/src/: main.rs
package/src/: lib.rs  main.rs
patternMatch/: Cargo.toml
patternMatch/src/: main.rs
result/src/: main.rs
statements_expressions/src/: main.rs
structs/src/: main.rs
traits/src/: main.rs
tuple/src/: main.rs
variables/src/: main.rs
vectors/src/: main.rs
(+11 files in other folders)
