[package]
name = "crud_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sea-orm = { version = "1.1.19", features = [
    "macros",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
sea-orm-migration = "1.1.19"
dotenvy = "0.15.7"
